@@ -1,3 +1,7 @@
+2014-02-06  Sergey Poznyakoff  <gray@gnu.org.ua>
+
+	* doc/Makefile.am: Use dist_man_MANS
+
 2013-12-25  Sergey Poznyakoff  <gray@gnu.org.ua>
 
 	Version 1.11
